--- a/workflows/sync-to-gcs.yml
+++ b/workflows/sync-to-gcs.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v1
       with:
-        project_id: wwww.itd2.net
+        project_id: itd2-website
         service_account_key: ${{ secrets.GCP_SA_KEY }}
 
     - name: Copy files to GCS
