--- a/workflows/sync-to-gcs.yml
+++ b/workflows/sync-to-gcs.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   deploy:
@@ -16,8 +17,9 @@ jobs:
     - name: Set up Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v1
       with:
-        project_id: itd2-website
+        project_id: itd2-website  # Replace with your actual Google Cloud project ID
         service_account_key: ${{ secrets.GCP_SA_KEY }}
 
     - name: Copy files to GCS
       run: gsutil -m cp -r * gs://www.itd2.net
+
